# transformer-experiments

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  k8s-job.yaml  pyproject.toml  run_job.sh  train.py  transformer.py
.github/workflows/: docker-build.yml
config/: training.yaml
src/: backward.py  train.py  transformer.py
