[project]
name = "pytorch-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "numpy>=2.3.3",
    "pre-commit>=4.3.0",
    "psutil>=7.1.3",
    "pyyaml==6.0.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "types-pyyaml>=6.0.12.20250915",
    "wandb>=0.23.0",
]
